k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nagad-deploy
  labels:
    app.kubernetes.io/part-of: nagad-deploy-console
