k8s/10-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-db
  namespace: nagad-deploy
spec:
  clusterIP: None
  selector:
    app: registry-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry-db
  namespace: nagad-deploy
spec:
  serviceName: registry-db
  replicas: 1
  selector:
    matchLabels:
      app: registry-db
  template:
    metadata:
      labels:
        app: registry-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U registry -d registrydb"]
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits: { cpu: "1", memory: "512Mi" }
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
